--- a/app/src/main/res/layout/issue_card.xml
+++ b/app/src/main/res/layout/issue_card.xml
@@ -79,7 +79,7 @@
             android:id="@+id/clock_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_"
+            android:src="@drawable/ic_access_time"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
