--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -7,7 +7,8 @@
             android:icon="@drawable/ic_home_black_24dp"/>
         <item
             android:id="@+id/menu_upvotes"
-            android:title="@string/drawer_upvotes"/>
+            android:title="@string/drawer_upvotes"
+            android:icon="@drawable/ic_arrow_up"/>
     </group>
     <group
         android:id="@+id/menu_bottom">
