--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group>
+    <group
+        android:checkableBehavior="single">
         <item
             android:id="@+id/menu_posts"
             android:title="@string/drawer_posts"
@@ -11,7 +12,8 @@
             android:icon="@drawable/ic_plus_one"/>
     </group>
     <group
-        android:id="@+id/menu_bottom">
+        android:id="@+id/menu_bottom"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/drawer_account"
             android:title="@string/drawer_account"
