--- a/app/src/main/res/layout/issue_card.xml
+++ b/app/src/main/res/layout/issue_card.xml
@@ -14,7 +14,7 @@
 
         <ImageView
             android:id="@+id/issue_image"
-            android:layout_width="100dp"
+            android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginTop="8dp"
             android:contentDescription="Issue Image"
