--- a/app/src/main/res/layout/activity_issue.xml
+++ b/app/src/main/res/layout/activity_issue.xml
@@ -60,7 +60,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:textSize="18dp"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/issue_category"
@@ -90,7 +90,7 @@
             android:id="@+id/upvote_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="4dp"
+            android:paddingStart="4dp"
             android:textSize="22sp"
             android:text="0"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -99,6 +99,7 @@
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
+        android:background="@color/greyColor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
@@ -121,7 +122,7 @@
             android:id="@+id/location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="4dp"
+            android:paddingStart="4dp"
             android:text="0"
             android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="parent"
