Added testing cards

--- a/app/src/main/res/layout/issue_card.xml
+++ b/app/src/main/res/layout/issue_card.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp"
-    card_view:cardCornerRadius="4dp">
+    card_view:cardCornerRadius="4dp"
+    android:layout_marginBottom="15dp">
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -15,7 +16,7 @@
         <ImageView
             android:id="@+id/issue_image"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="150dp"
             android:layout_marginTop="8dp"
             android:contentDescription="Issue Image"
             app:layout_constraintLeft_toLeftOf="parent"
