--- a/app/src/main/res/xml/location_searchable.xml
+++ b/app/src/main/res/xml/location_searchable.xml
@@ -2,6 +2,6 @@
 <searchable xmlns:android="http://schemas.android.com/apk/res/android"
     android:label="@string/app_name"
     android:hint="@string/search_by_location"
-    android:searchSuggestAuthority="package com.example.sanidhya.m_xpress"
+    android:searchSuggestAuthority="com.example.sanidhya.m_xpress"
     android:searchSuggestIntentAction="android.intent.action.VIEW">
 </searchable>
