--- a/app/src/main/res/layout/fragment_nearby_issues.xml
+++ b/app/src/main/res/layout/fragment_nearby_issues.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.NearbyIssuesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/nearby_map_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:layout_height="match_parent">
+    </com.google.android.gms.maps.MapView>
 </FrameLayout>
