--- a/app/src/main/res/layout/activity_add_issue.xml
+++ b/app/src/main/res/layout/activity_add_issue.xml
@@ -41,6 +41,7 @@
         android:layout_marginTop="70dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="45dp"
+        android:onClick="onClickPost"
 
         android:background="@color/colorPrimary"
         android:text="Post!"
